[metadata]
name = glass-pyccl
version = attr: glass.pyccl.__version__
maintainer = Nicolas Tessore
maintainer_email = n.tessore@ucl.ac.uk
description = GLASS module for CCL interoperability
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
url = https://github.com/astro-ph/glass-pyccl
project_urls =
    Issues = https://github.com/astro-ph/glass-pyccl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires =
    numpy
    pyccl
    glass>=2022.3.11
packages = glass

[options.extras_require]
test =
    pytest

[tool:pytest]
addopts = --doctest-modules

[flake8]
ignore = E226,E501,E741
